[package]
name = "craps"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[profile.release]
debug = true

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
pub-sub = "2.0.0"
uuid = { version = "0.8.2", features = ["v4"]}
axum = { version = "0.2.3", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.2.20", feature = ["fmt"]}
tower-http = { version = "0.1", features = ["fs", "trace"]}
headers = "0.3"
ecdsa = "0.12.4"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
futures = "0.3.17"
serde_json = "1.0.59"
serde = "1.0.117"
tracing-opentelemetry = "0.15.0"
opentelemetry = {version = "0.16.0", features = ["rt-tokio", "trace"]}
opentelemetry-jaeger = {version = "0.15.0", features = ["rt-tokio"]}
tracing-tracy = {version = "0.7.0", features = ["ondemand", "noexit"]}
tracy-client = "0.12.4"
prometheus = "0.12.0"
opentelemetry-prometheus = "0.9.0"
